--- a/project_ch03/build.gradle
+++ b/project_ch03/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = 'mainPackage.MainForAssembler'
+mainClassName = 'mainPackage.MainForSpring'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
